Author Management Blazor Server UI

--- a/BookStoreApp.Blazor.Server.UI/Pages/User/Login.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/User/Login.razor
@@ -47,10 +47,8 @@
             {
                
             }
-            else
-            {
-                message = e.Message;
-            }
+           
+                message = e.Response;
         }
     }
 }
