--- a/BookStoreApp.Blazor.Server.UI/Shared/NavMenu.razor
+++ b/BookStoreApp.Blazor.Server.UI/Shared/NavMenu.razor
@@ -30,7 +30,12 @@
                 <hr/>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="authors/">
-                        <span class="oi oi-book" aria-hidden="true"></span> Authors
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Authors
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="books/">
+                        <span class="oi oi-book" aria-hidden="true"></span> Books
                     </NavLink>
                 </div>
             </Authorized>
